# Hayro

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml
hayro-annot/: Cargo.toml  TEST_STRATEGY.md
hayro-annot/src/: appearance.rs  coord.rs  lib.rs  types.rs  writer.rs
hayro-annot/tests/: roundtrip.rs  spec_suite.rs
hayro-cmap/src/: parse.rs
hayro-cmap/src/bcmap/: mod.rs
hayro-demo/: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  playwright.config.js
hayro-demo/e2e/: annotation-select.spec.js  annotation.spec.js  fixtures.js  mobile-annotation.spec.js  mobile-zoom.spec.js  scroll.spec.js  upload.spec.js  zoom.spec.js
hayro-demo/src/: geometry.rs  lib.rs  operations.rs
hayro-demo/tests-js/: draw_helpers.test.js  state_helpers.test.js  viewer_math.test.js
hayro-demo/www/: .gitignore  draw_helpers.js  index.html  index.js  state_helpers.js  styles.css  viewer_math.js
hayro-interpret/: Cargo.toml
hayro-interpret/src/: lib.rs  text_extract.rs
hayro-interpret/src/interpret/: mod.rs
hayro-tests/tests/: mod.rs  text_extract.rs
